[package]
name = "didemo_common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Components shared by actors in a digital identity simulation environment"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
