[package]
name = "didemo_issuer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation of an issuer in a digital identity deployment"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
didemo_common.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
