[package]
name = "didemo_simulations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
didemo_common.workspace = true
didemo_issuer.workspace = true
didemo_wallet.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

